output/chronos_antlrParser.java
// $ANTLR 3.4 /Users/shannonlee/PLT_Team20/chronos_antlr.g 2012-04-28 19:34:55

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class chronos_antlrParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "BLOCK", "BREAK_T", "CHAR", "CLAUSE", "COMMENT", "COND", "COURSELIST_T", "COURSE_T", "DATETIME", "DAY", "DAYS", "DECL", "DOUBLE_T", "ELSE_T", "EQ", "ESC_SEQ", "EXPONENT", "EXPR", "FLOAT", "FOREACH_T", "FUNC", "GEQ", "HEX_DIGIT", "ID", "IF_T", "INT", "INT_T", "IN_T", "LEQ", "NEQ", "NEW_T", "NOT", "OCTAL_ESC", "OR", "PARAMS", "SCHEDULE_T", "SOURCE_PROGRAM", "STRING", "STRING_T", "TIME", "TIMES", "TIME_T", "UNICODE_ESC", "WHITESPACE", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "';'", "'<'", "'='", "'>'", "'F'", "'M'", "'R'", "'T'", "'W'", "'['", "']'", "'{'", "'}'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int AND=4;
    public static final int BLOCK=5;
    public static final int BREAK_T=6;
    public static final int CHAR=7;
    public static final int CLAUSE=8;
    public static final int COMMENT=9;
    public static final int COND=10;
    public static final int COURSELIST_T=11;
    public static final int COURSE_T=12;
    public static final int DATETIME=13;
    public static final int DAY=14;
    public static final int DAYS=15;
    public static final int DECL=16;
    public static final int DOUBLE_T=17;
    public static final int ELSE_T=18;
    public static final int EQ=19;
    public static final int ESC_SEQ=20;
    public static final int EXPONENT=21;
    public static final int EXPR=22;
    public static final int FLOAT=23;
    public static final int FOREACH_T=24;
    public static final int FUNC=25;
    public static final int GEQ=26;
    public static final int HEX_DIGIT=27;
    public static final int ID=28;
    public static final int IF_T=29;
    public static final int INT=30;
    public static final int INT_T=31;
    public static final int IN_T=32;
    public static final int LEQ=33;
    public static final int NEQ=34;
    public static final int NEW_T=35;
    public static final int NOT=36;
    public static final int OCTAL_ESC=37;
    public static final int OR=38;
    public static final int PARAMS=39;
    public static final int SCHEDULE_T=40;
    public static final int SOURCE_PROGRAM=41;
    public static final int STRING=42;
    public static final int STRING_T=43;
    public static final int TIME=44;
    public static final int TIMES=45;
    public static final int TIME_T=46;
    public static final int UNICODE_ESC=47;
    public static final int WHITESPACE=48;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "type_specifier", "math_expr", "rel_expr", "derived_type_declarator", 
    "jump_stmt", "selection_stmt", "datetime", "argument_expr_list", "iteration_stmt", 
    "primary_expr", "cond_term", "primitive_declarator", "math_term", "declarator", 
    "unary_expr", "dayblock", "daything", "equiv_expr", "expr", "postfix_expr", 
    "derived_type_specifier", "stmt", "translation_unit", "timeblock", "constant"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public chronos_antlrParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public chronos_antlrParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this,port,adaptor);
        setDebugListener(proxy);
        setTokenStream(new DebugTokenStream(input,proxy));
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);
        proxy.setTreeAdaptor(adap);
    }

public chronos_antlrParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg);
     
    TreeAdaptor adap = new CommonTreeAdaptor();
    setTreeAdaptor(adap);


}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

protected DebugTreeAdaptor adaptor;
public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = new DebugTreeAdaptor(dbg,adaptor);


}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}

    public String[] getTokenNames() { return chronos_antlrParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/shannonlee/PLT_Team20/chronos_antlr.g"; }


    public static class translation_unit_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "translation_unit"
    // /Users/shannonlee/PLT_Team20/chronos_antlr.g:22:1: translation_unit : ( declarator ';' )* ( stmt )* -> ^( SOURCE_PROGRAM ( declarator )* ( stmt )* ) ;
    public final chronos_antlrParser.translation_unit_return translation_unit() throws RecognitionException {
        chronos_antlrParser.translation_unit_return retval = new chronos_antlrParser.translation_unit_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal2=null;
        chronos_antlrParser.declarator_return declarator1 =null;

        chronos_antlrParser.stmt_return stmt3 =null;


        Object char_literal2_tree=null;
        RewriteRuleTokenStream stream_57=new RewriteRuleTokenStream(adaptor,"token 57");
        RewriteRuleSubtreeStream stream_declarator=new RewriteRuleSubtreeStream(adaptor,"rule declarator");
        RewriteRuleSubtreeStream stream_stmt=new RewriteRuleSubtreeStream(adaptor,"rule stmt");
        try { dbg.enterRule(getGrammarFileName(), "translation_unit");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(22, 0);

        try {
            // /Users/shannonlee/PLT_Team20/chronos_antlr.g:23:2: ( ( declarator ';' )* ( stmt )* -> ^( SOURCE_PROGRAM ( declarator )* ( stmt )* ) )
            dbg.enterAlt(1);

            // /Users/shannonlee/PLT_Team20/chronos_antlr.g:23:4: ( declarator ';' )* ( stmt )*
            {
            dbg.location(23,4);
            // /Users/shannonlee/PLT_Team20/chronos_antlr.g:23:4: ( declarator ';' )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==DOUBLE_T||LA1_0==INT_T||LA1_0==NEW_T||LA1_0==STRING_T||LA1_0==TIME_T) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/shannonlee/PLT_Team20/chronos_antlr.g:23:5: declarator ';'
            	    {
            	    dbg.location(23,5);
            	    pushFollow(FOLLOW_declarator_in_translation_unit76);
            	    declarator1=declarator();

            	    state._fsp--;

            	    stream_declarator.add(declarator1.getTree());
            	    dbg.location(23,15);
            	    char_literal2=(Token)match(input,57,FOLLOW_57_in_translation_unit77);  
            	    stream_57.add(char_literal2);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(23,21);
            // /Users/shannonlee/PLT_Team20/chronos_antlr.g:23:21: ( stmt )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==BREAK_T||(LA2_0 >= FLOAT && LA2_0 <= FOREACH_T)||(LA2_0 >= ID && LA2_0 <= INT)||LA2_0==NOT||LA2_0==STRING||LA2_0==TIME||LA2_0==49||LA2_0==57||LA2_0==66) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/shannonlee/PLT_Team20/chronos_antlr.g:23:22: stmt
            	    {
            	    dbg.location(23,22);
            	    pushFollow(FOLLOW_stmt_in_translation_unit82);
            	    stmt3=stmt();

            	    state._fsp--;

            	    stream_stmt.add(stmt3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}


            // AST REWRITE
            // elements: stmt, declarator
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 23:29: -> ^( SOURCE_PROGRAM ( declarator )* ( stmt )* )
            {
                dbg.location(23,32);
                // /Users/shannonlee/PLT_Team20/chronos_antlr.g:23:32: ^( SOURCE_PROGRAM ( declarator )* ( stmt )* )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(23,34);
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(SOURCE_PROGRAM, "SOURCE_PROGRAM")
                , root_1);

                dbg.location(23,49);
                // /Users/shannonlee/PLT_Team20/chronos_antlr.g:23:49: ( declarator )*
                while ( stream_declarator.hasNext() ) {
                    dbg.location(23,49);
                    adaptor.addChild(root_1, stream_declarator.nextTree());

                }
                stream_declarator.reset();
                dbg.location(23,61);
                // /Users/shannonlee/PLT_Team20/chronos_antlr.g:23:61: ( stmt )*
                while ( stream_stmt.hasNext() ) {
                    dbg.location(23,61);
                    adaptor.addChild(root_1, stream_stmt.nextTree());

                }
                stream_stmt.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(24, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "translation_unit");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "translation_unit"


    public static class declarator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declarator"
    // /Users/shannonlee/PLT_Team20/chronos_antlr.g:25:1: declarator : ( primitive_declarator | derived_type_declarator );
    public final chronos_antlrParser.declarator_return declarator() throws RecognitionException {
        chronos_antlrParser.declarator_return retval = new chronos_antlrParser.declarator_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        chronos_antlrParser.primitive_declarator_return primitive_declarator4 =null;

        chronos_antlrParser.derived_type_declarator_return derived_type_declarator5 =null;



        try { dbg.enterRule(getGrammarFileName(), "declarator");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(25, 0);

        try {
            // /Users/shannonlee/PLT_Team20/chronos_antlr.g:26:2: ( primitive_declarator | derived_type_declarator )
            int alt3=2;
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            int LA3_0 = input.LA(1);

            if ( (LA3_0==DOUBLE_T||LA3_0==INT_T||LA3_0==STRING_T||LA3_0==TIME_T) ) {
                alt3=1;
            }
            else if ( (LA3_0==NEW_T) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/shannonlee/PLT_Team20/chronos_antlr.g:26:4: primitive_declarator
                    {
                    root_0 = (Object)adaptor.nil();


                    dbg.location(26,4);
                    pushFollow(FOLLOW_primitive_declarator_in_declarator106);
                    primitive_declarator4=primitive_declarator();

                    state._fsp--;

                    adaptor.addChild(root_0, primitive_declarator4.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/shannonlee/PLT_Team20/chronos_antlr.g:27:4: derived_type_declarator
                    {
                    root_0 = (Object)adaptor.nil();


                    dbg.location(27,4);
                    pushFollow(FOLLOW_derived_type_declarator_in_declarator111);
                    derived_type_declarator5=derived_type_declarator();

                    state._fsp--;

                    adaptor.addChild(root_0, derived_type_declarator5.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(28, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declarator");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "declarator"


    public static class primitive_declarator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "primitive_declarator"
    // /Users/shannonlee/PLT_Team20/chronos_antlr.g:29:1: primitive_declarator : ( type_specifier ID -> ^( DECL type_specifier ID ) | type_specifier ID '=' expr -> ^( '=' ^( DECL type_specifier ID ) expr ) );
    public final chronos_antlrParser.primitive_declarator_return primitive_declarator() throws RecognitionException {
        chronos_antlrParser.primitive_declarator_return retval = new chronos_antlrParser.primitive_declarator_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID7=null;
        Token ID9=null;
        Token char_literal10=null;
        chronos_antlrParser.type_specifier_return type_specifier6 =null;

        chronos_antlrParser.type_specifier_return type_specifier8 =null;

        chronos_antlrParser.expr_return expr11 =null;


        Object ID7_tree=null;
        Object ID9_tree=null;
        Object char_literal10_tree=null;
        RewriteRuleTokenStream stream_59=new RewriteRuleTokenStream(adaptor,"token 59");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_type_specifier=new RewriteRuleSubtreeStream(adaptor,"rule type_specifier");
        try { dbg.enterRule(getGrammarFileName(), "primitive_declarator");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(29, 0);

        try {
            // /Users/shannonlee/PLT_Team20/chronos_antlr.g:30:2: ( type_specifier ID -> ^( DECL type_specifier ID ) | type_specifier ID '=' expr -> ^( '=' ^( DECL type_specifier ID ) expr ) )
            int alt4=2;
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            int LA4_0 = input.LA(1);

            if ( (LA4_0==DOUBLE_T||LA4_0==INT_T||LA4_0==STRING_T||LA4_0==TIME_T) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==ID) ) {
                    int LA4_2 = input.LA(3);

                    if ( (LA4_2==59) ) {
                        alt4=2;
                    }
                    else if ( (LA4_2==57) ) {
                        alt4=1;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 2, input);

                        dbg.recognitionException(nvae);
                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/shannonlee/PLT_Team20/chronos_antlr.g:30:4: type_specifier ID
                    {
                    dbg.location(30,4);
                    pushFollow(FOLLOW_type_specifier_in_primitive_declarator121);
                    type_specifier6=type_specifier();

                    state._fsp--;

                    stream_type_specifier.add(type_specifier6.getTree());
                    dbg.location(30,19);
                    ID7=(Token)match(input,ID,FOLLOW_ID_in_primitive_declarator123);  
                    stream_ID.add(ID7);


                    // AST REWRITE
                    // elements: type_specifier, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 30:22: -> ^( DECL type_specifier ID )
                    {
                        dbg.location(30,25);
                        // /Users/shannonlee/PLT_Team20/chronos_antlr.g:30:25: ^( DECL type_specifier ID )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        dbg.location(30,27);
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(DECL, "DECL")
                        , root_1);

                        dbg.location(30,32);
                        adaptor.addChild(root_1, stream_type_specifier.nextTree());
                        dbg.location(30,47);
                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/shannonlee/PLT_Team20/chronos_antlr.g:31:4: type_specifier ID '=' expr
                    {
                    dbg.location(31,4);
                    pushFollow(FOLLOW_type_specifier_in_primitive_declarator138);
                    type_specifier8=type_specifier();

                    state._fsp--;

                    stream_type_specifier.add(type_specifier8.getTree());
                    dbg.location(31,19);
                    ID9=(Token)match(input,ID,FOLLOW_ID_in_primitive_declarator140);  
                    stream_ID.add(ID9);

                    dbg.location(31,22);
                    char_literal10=(Token)match(input,59,FOLLOW_59_in_primitive_declarator142);  
                    stream_59.add(char_literal10);

                    dbg.location(31,26);
                    pushFollow(FOLLOW_expr_in_primitive_declarator144);
                    expr11=expr();

                    state._fsp--;

                    stream_expr.add(expr11.getTree());

                    // AST REWRITE
                    // elements: type_specifier, 59, ID, expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 31:31: -> ^( '=' ^( DECL type_specifier ID ) expr )
                    {
                        dbg.location(31,34);
                        // /Users/shannonlee/PLT_Team20/chronos_antlr.g:31:34: ^( '=' ^( DECL type_specifier ID ) expr )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        dbg.location(31,36);
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_59.nextNode()
                        , root_1);

                        dbg.location(31,40);
                        // /Users/shannonlee/PLT_Team20/chronos_antlr.g:31:40: ^( DECL type_specifier ID )
                        {
                        Object root_2 = (Object)adaptor.nil();
                        dbg.location(31,42);
                        root_2 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(DECL, "DECL")
                        , root_2);

                        dbg.location(31,47);
                        adaptor.addChild(root_2, stream_type_specifier.nextTree());
                        dbg.location(31,62);
                        adaptor.addChild(root_2, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, root_2);
                        }
                        dbg.location(31,66);
                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(32, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "primitive_declarator");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "primitive_declarator"


    public static class derived_type_declarator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "derived_type_declarator"
    // /Users/shannonlee/PLT_Team20/chronos_antlr.g:33:1: derived_type_declarator : ( NEW_T derived_type_specifier ID -> ^( DECL derived_type_specifier ID ) | NEW_T derived_type_specifier ID '=' expr -> ^( '=' ^( DECL derived_type_specifier ID ) expr ) );
    public final chronos_antlrParser.derived_type_declarator_return derived_type_declarator() throws RecognitionException {
        chronos_antlrParser.derived_type_declarator_return retval = new chronos_antlrParser.derived_type_declarator_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NEW_T12=null;
        Token ID14=null;
        Token NEW_T15=null;
        Token ID17=null;
        Token char_literal18=null;
        chronos_antlrParser.derived_type_specifier_return derived_type_specifier13 =null;

        chronos_antlrParser.derived_type_specifier_return derived_type_specifier16 =null;

        chronos_antlrParser.expr_return expr19 =null;


        Object NEW_T12_tree=null;
        Object ID14_tree=null;
        Object NEW_T15_tree=null;
        Object ID17_tree=null;
        Object char_literal18_tree=null;
        RewriteRuleTokenStream stream_59=new RewriteRuleTokenStream(adaptor,"token 59");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_NEW_T=new RewriteRuleTokenStream(adaptor,"token NEW_T");
        RewriteRuleSubtreeStream stream_derived_type_specifier=new RewriteRuleSubtreeStream(adaptor,"rule derived_type_specifier");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try { dbg.enterRule(getGrammarFileName(), "derived_type_declarator");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(33, 0);

        try {
            // /Users/shannonlee/PLT_Team20/chronos_antlr.g:34:2: ( NEW_T derived_type_specifier ID -> ^( DECL derived_type_specifier ID ) | NEW_T derived_type_specifier ID '=' expr -> ^( '=' ^( DECL derived_type_specifier ID ) expr ) )
            int alt5=2;
            try { dbg.enterDecision(5, decisionCanBacktrack[5]);

            int LA5_0 = input.LA(1);

            if ( (LA5_0==NEW_T) ) {
                int LA5_1 = input.LA(2);

                if ( ((LA5_1 >= COURSELIST_T && LA5_1 <= COURSE_T)||LA5_1==SCHEDULE_T) ) {
                    int LA5_2 = input.LA(3);

                    if ( (LA5_2==ID) ) {
                        int LA5_3 = input.LA(4);

                        if ( (LA5_3==59) ) {
                            alt5=2;
                        }
                        else if ( (LA5_3==57) ) {
                            alt5=1;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 5, 3, input);

                            dbg.recognitionException(nvae);
                            throw nvae;

                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 2, input);

                        dbg.recognitionException(nvae);
                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);
